tests/semantic/pass/scopes2.c
struct S {int i;};

int foo(struct S {int i;} s) {return 0;}
