tests/semantic/fail/illegal_member_access3.c
int main(void) {
  struct S {int i;} s;
  return s.1;
}
